@@ -2,7 +2,7 @@
 /*
  * @package AJAX_Chat
  * @author Sebastian Tschan
- * @author vitoalvaro
+ * @author Pedro Innecco
  * @copyright (c) Sebastian Tschan
  * @license GNU Affero General Public License
  * @link https://blueimp.net/ajax/
@@ -19,106 +19,106 @@ $lang['style'] = 'Aparência';
 $lang['language'] = 'Idioma';
 $lang['inputLineBreak'] = 'Pressione SHIFT+ENTER para inserir uma quebra de linha';
 $lang['messageSubmit'] = 'Enviar';
-$lang['registeredUsers'] = 'Usuários registrados';
+$lang['registeredUsers'] = 'Para Usuários Registrados';
 $lang['onlineUsers'] = 'Usuários Online';
-$lang['toggleAutoScroll'] = 'Autorolagem Liga/Desliga';
-$lang['toggleAudio'] = 'Som Liga/Desliga';
-$lang['toggleHelp'] = 'Mostrar/Esconder Ajuda';
-$lang['toggleSettings'] = 'Mostrar/Esconder configurações';
-$lang['toggleOnlineList'] = 'Mostrar/Esconder listas online';
+$lang['toggleAutoScroll'] = 'Autorolagem liga/desliga';
+$lang['toggleAudio'] = 'Som liga/desliga';
+$lang['toggleHelp'] = 'Mostrar/esconder ajuda';
+$lang['toggleSettings'] = 'Mostrar/esconder configurações';
+$lang['toggleOnlineList'] = 'Mostrar/esconder lista de usuários online';
 $lang['bbCodeLabelBold'] = 'b';
 $lang['bbCodeLabelItalic'] = 'i';
 $lang['bbCodeLabelUnderline'] = 'u';
 $lang['bbCodeLabelQuote'] = 'Citar';
 $lang['bbCodeLabelCode'] = 'Código';
 $lang['bbCodeLabelURL'] = 'URL';
-$lang['bbCodeLabelImg'] = 'Image';
-$lang['bbCodeLabelColor'] = 'Fonte da cor';
+$lang['bbCodeLabelImg'] = 'Imagem';
+$lang['bbCodeLabelColor'] = 'Cor da fonte';
 $lang['bbCodeTitleBold'] = 'Texto negrito: [b]texto[/b]';
 $lang['bbCodeTitleItalic'] = 'Texto itálico: [i]texto[/i]';
-$lang['bbCodeTitleUnderline'] = 'Texto Sublinhado: [u]texto[/u]';
+$lang['bbCodeTitleUnderline'] = 'Texto sublinhado: [u]texto[/u]';
 $lang['bbCodeTitleQuote'] = 'Citar texto: [quote]texto[/quote] ou [quote=autor]texto[/quote]';
 $lang['bbCodeTitleCode'] = 'Citar código: [code]código[/code]';
 $lang['bbCodeTitleURL'] = 'Inserir URL: [url]http://example.org[/url] or [url=http://example.org]texto[/url]';
-$lang['bbCodeTitleImg'] = 'Insert image: [img]http://example.org/image.jpg[/img]';
-$lang['bbCodeTitleColor'] = 'Fonte da cor: [color=red]texto[/color]';
+$lang['bbCodeTitleImg'] = 'Inserir imagem: [img]http://example.org/image.jpg[/img]';
+$lang['bbCodeTitleColor'] = 'Cor da fonte: [color=red]texto[/color]';
 $lang['help'] = 'Ajuda';
-$lang['helpItemDescJoin'] = 'Entrar canal:';
+$lang['helpItemDescJoin'] = 'Entrar em um canal:';
 $lang['helpItemCodeJoin'] = '/join Nome do Canal';
-$lang['helpItemDescJoinCreate'] = 'Criar a sala privada (Somente usuários registrados):';
+$lang['helpItemDescJoinCreate'] = 'Criar uma sala privada (Somente usuários registrados):';
 $lang['helpItemCodeJoinCreate'] = '/join';
-$lang['helpItemDescInvite'] = 'Convidar alguém (Por exemplo, sala privada):';
+$lang['helpItemDescInvite'] = 'Convidar alguém (Por exemplo, para uma sala privada):';
 $lang['helpItemCodeInvite'] = '/invite Usuário';
 $lang['helpItemDescUninvite'] = 'Cancelar convite';
 $lang['helpItemCodeUninvite'] = '/uninvite Usuário';
-$lang['helpItemDescLogout'] = 'Saiu do Chat:';
+$lang['helpItemDescLogout'] = 'Sair do Chat:';
 $lang['helpItemCodeLogout'] = '/quit';
-$lang['helpItemDescPrivateMessage'] = 'Mensagem privada:';
+$lang['helpItemDescPrivateMessage'] = 'Enviar mensagem privada:';
 $lang['helpItemCodePrivateMessage'] = '/msg Usuário Texto';
-$lang['helpItemDescQueryOpen'] = 'Abrir o canal privado:';
+$lang['helpItemDescQueryOpen'] = 'Abrir um canal privado:';
 $lang['helpItemCodeQueryOpen'] = '/query Usuário';
 $lang['helpItemDescQueryClose'] = 'Fechar um canal privado:';
 $lang['helpItemCodeQueryClose'] = '/query';
-$lang['helpItemDescAction'] = 'Descreva a ação:';
+$lang['helpItemDescAction'] = 'Descrever uma ação:';
 $lang['helpItemCodeAction'] = '/action Texto';
-$lang['helpItemDescDescribe'] = 'Descreva a ação em mensagem privada:';
+$lang['helpItemDescDescribe'] = 'Descrever uma ação em uma mensagem privada:';
 $lang['helpItemCodeDescribe'] = '/describe Usuário Texto';
-$lang['helpItemDescIgnore'] = 'Ignorar/Aceitar mensagem do usuário:';
+$lang['helpItemDescIgnore'] = 'Ignorar/Aceitar mensagens de um usuário:';
 $lang['helpItemCodeIgnore'] = '/ignore Usuário';
-$lang['helpItemDescIgnoreList'] = 'Listas usuários ignorados:';
+$lang['helpItemDescIgnoreList'] = 'Listar usuários ignorados:';
 $lang['helpItemCodeIgnoreList'] = '/ignore';
-$lang['helpItemDescWhereis'] = 'Exibir usuário do canal:';
+$lang['helpItemDescWhereis'] = 'Exibir canal de um usuário:';
 $lang['helpItemCodeWhereis'] = '/whereis Usuário';
-$lang['helpItemDescKick'] = 'Kickar o usuário (Somente Moderadores):';
+$lang['helpItemDescKick'] = 'Banir um usuário (Somente Moderadores):';
 $lang['helpItemCodeKick'] = '/kick Usuário [Bandido por minutos]';
-$lang['helpItemDescUnban'] = 'Desbanir o usuário (Somente Moderadores):';
+$lang['helpItemDescUnban'] = 'Desbanir um usuário (Somente Moderadores):';
 $lang['helpItemCodeUnban'] = '/unban Usuário';
-$lang['helpItemDescBans'] = 'Lista usuários banidos (Somente Moderadores):';
+$lang['helpItemDescBans'] = 'Listar usuários banidos (Somente Moderadores):';
 $lang['helpItemCodeBans'] = '/bans';
-$lang['helpItemDescWhois'] = 'Exibir IP do usuário (Somente Moderadores):';
+$lang['helpItemDescWhois'] = 'Exibir IP de um usuário (Somente Moderadores):';
 $lang['helpItemCodeWhois'] = '/whois Usuário';
-$lang['helpItemDescWho'] = 'Lista usuários online:';
+$lang['helpItemDescWho'] = 'Listar usuários online:';
 $lang['helpItemCodeWho'] = '/who [Channelname]';
-$lang['helpItemDescList'] = 'Lista canais diponíveis:';
+$lang['helpItemDescList'] = 'Listar canais diponíveis:';
 $lang['helpItemCodeList'] = '/list';
 $lang['helpItemDescRoll'] = 'Jogar dados:';
 $lang['helpItemCodeRoll'] = '/roll [números]d[lados]';
-$lang['helpItemDescNick'] = 'Trocar nome do usuário:';
-$lang['helpItemCodeNick'] = '/nick Username';
+$lang['helpItemDescNick'] = 'Trocar seu nome de usuário:';
+$lang['helpItemCodeNick'] = '/nick Nome';
 $lang['settings'] = 'Configurações';
 $lang['settingsBBCode'] = 'Permitir BBCode:';
-$lang['settingsBBCodeImages'] = 'Enable image BBCode:';
-$lang['settingsBBCodeColors'] = 'Enable font color BBCode:';
+$lang['settingsBBCodeImages'] = 'Permitir BBCode image (imagem):';
+$lang['settingsBBCodeColors'] = 'Permitir BBCode font color (cor de fonte):';
 $lang['settingsHyperLinks'] = 'Permitir hyperlinks:';
 $lang['settingsLineBreaks'] = 'Permitir quebra-linha:';
 $lang['settingsEmoticons'] = 'Permitir emoticons:';
-$lang['settingsAutoFocus'] = 'Definir automaticamente a centrar-se no campo de pesquisa:';
+$lang['settingsAutoFocus'] = 'Definir automaticamente o foco no campo de envio de mensagens:';
 $lang['settingsMaxMessages'] = 'O número máximo de mensagens na lista do Chat:';
-$lang['settingsWordWrap'] = 'Permitir envolver de palavras longas:';
+$lang['settingsWordWrap'] = 'Permitir quebra de linha para palavras longas:';
 $lang['settingsMaxWordLength'] = 'O comprimento máximo de uma palavra antes dele começa envolvido:';
 $lang['settingsDateFormat'] = 'Formato da exposição da data e da hora:';
-$lang['settingsPersistFontColor'] = 'Persistir fonte da cor:';
-$lang['settingsAudioVolume'] = 'Som do volume:';
-$lang['settingsSoundReceive'] = 'Som para as mensagens recebidas:';
-$lang['settingsSoundSend'] = 'Som de mensagens enviadas:';
-$lang['settingsSoundEnter'] = 'Som de logar e entrar canal mensagens:';
-$lang['settingsSoundLeave'] = 'Som para deslogar e deixar mensagens canal:';
-$lang['settingsSoundChatBot'] = 'Som para chatbot mensagens:';
+$lang['settingsPersistFontColor'] = 'Persistir cor da fonte:';
+$lang['settingsAudioVolume'] = 'Volume do som:';
+$lang['settingsSoundReceive'] = 'Som para mensagens recebidas:';
+$lang['settingsSoundSend'] = 'Som para mensagens enviadas:';
+$lang['settingsSoundEnter'] = 'Som para login e avisos de entrada em canais:';
+$lang['settingsSoundLeave'] = 'Som para logout e avisos de saida em canais:';
+$lang['settingsSoundChatBot'] = 'Som para mensagens do chatbot:';
 $lang['settingsSoundError'] = 'Som para mensagens de erro:';
 $lang['settingsBlink'] = 'Título da janela do piscamento em mensagens novas:';
 $lang['settingsBlinkInterval'] = 'Intervalo do piscamento nos milissegundos:';
 $lang['settingsBlinkIntervalNumber'] = 'Número de intervalos do piscamento:';
 $lang['playSelectedSound'] = 'Reproduzir som selecionado';
-$lang['requiresJavaScript'] = 'O Javascript é requerido para este Chat.';
+$lang['requiresJavaScript'] = 'Javascript é requerido para este Chat.';
 $lang['errorInvalidUser'] = 'Usuário inválido.';
-$lang['errorUserInUse'] = 'Usuário em uso.';
-$lang['errorBanned'] = 'Usuário ou IP está banido.';
-$lang['errorMaxUsersLoggedIn'] = 'O chat atingiu o número máximo de membros logados.';
-$lang['errorChatClosed'] = 'O Chat está fechado no momento.';
-$lang['logsTitle'] = 'AJAX Chat - Relatório';
+$lang['errorUserInUse'] = 'Usuário já se encontra em uso.';
+$lang['errorBanned'] = 'O usuário ou endereço de IP foi banido do chat.';
+$lang['errorMaxUsersLoggedIn'] = 'O chat atingiu o número máximo de usuários permitidos.';
+$lang['errorChatClosed'] = 'O chat está fechado no momento.';
+$lang['logsTitle'] = 'Ajax Chat - Relatório';
 $lang['logsDate'] = 'Data';
-$lang['logsTime'] = 'Tempo';
-$lang['logsSearch'] = 'Procurar';
+$lang['logsTime'] = 'Hora';
+$lang['logsSearch'] = 'Pesquisar';
 $lang['logsPrivateChannels'] = 'Canais privados';
 $lang['logsPrivateMessages'] = 'Mensagens privadas';
 ?>
